Fix minor issue 2